--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "afarmacco-test",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://afarmacco-api.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -28,7 +28,7 @@
   "scripts": {
     "devStart": "react-scripts start",
     "start": "node server.js",
-    "dev": "run-p server start",
+    "dev": "run-p server devStart",
     "server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
