--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "afarmacco-test",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -18,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.1.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-to-print": "^2.14.4",
