--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "afarmacco-test",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://afarmacco-api.herokuapp.com/",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -16,14 +16,21 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-export-table-to-excel": "^1.0.3",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.1.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.5",
     "react-to-print": "^2.14.4",
+    "recharts": "^2.1.9",
     "sequelize": "^6.13.0",
     "tedious": "^14.0.0",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
