--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -17,6 +18,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^17.0.2",
     "react-export-table-to-excel": "^1.0.3",
     "react-html-table-to-excel": "^2.0.0",
